@@ -1,3 +1,10 @@
+2019-09-15  Jason Merrill  <jason@redhat.com>
+
+	* call.c (build_new_op_1): Don't apply any standard conversions to
+	the operands of a built-in operator.  Don't suppress conversions in
+	cp_build_unary_op.
+	* typeck.c (cp_build_unary_op): Do integral promotions for enums.
+
 2019-11-04  Jason Merrill  <jason@redhat.com>
 
 	Use vec instead of raw array for built-in candidates.
