@@ -1,3 +1,8 @@
+2019-10-26  Jason Merrill  <jason@redhat.com>
+
+	PR tree-optimization/91825
+	* expmed.c: Reduce -Wmaybe-uninitialized to warning.
+
 2019-11-05  Jim Wilson  <jimw@sifive.com>
 
 	PR middle-end/92263
